# asmos

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs  start.sh
.cargo/: config.toml
.github/workflows/: mdbook.yml  rust.yml
book/: book.toml
book/src/: SUMMARY.md
boot/grub/: grub.cfg
cfg/ld/: x86_64.ld
cfg/targets/: x86_64.json
cfg/x86_64/: x86_64.json
image/boot/grub/: grub.cfg
iso/boot/grub/: grub.cfg
recipes/: build.rs
scripts/: start.sh
src/: lib.rs  main.rs
src/aux/: log.rs  logging.rs  mod.rs
src/boot/: mod.rs
src/kernel/: Cargo.toml  mod.rs  serial.rs
src/kernel/arch/: mod.rs
src/kernel/arch/x86_64/: elf.rs  exceptions.rs  gdt.rs  idt.rs  mod.rs  serial.rs
src/kernel/arch/x86_64/cfg/: link.ld  x86_64.json
src/kernel/arch/x86_64/naked/: main.s  meta.s  prelude.s
src/kernel/arch/x86_64/prelude/: main.s
src/kernel/src/: lib.rs  wood.rs
src/kernel/src/x86_64/: Cargo.toml
src/kernel/src/x86_64/recipes/: build.rs
src/kernel/src/x86_64/src/: exceptions.rs  gdt.rs  idt.rs  lib.rs  meta.rs  serial.rs
